--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-26  Dan Bernstein  <mitz@apple.com>
+
+        - Tiger build fix.
+
+        * DumpRenderTree/mac/Configurations/Base.xcconfig:
+
 2007-11-26  Kevin McCullough  <kmccullough@apple.com>
 
         Reviewed by Maciej.
