Reviewed by Kevin McCullough.
        Fixed <rdar://problem/5597937> REGRESSION (r27126): Drosera does not 
        show variables (can't enumerate ActivationImp properties)
        
        Implemented a custome ActivationImp::getPropertyNames, since 
        ActivationImp now uses a custom property storage mechanism for local
        variables.

        * kjs/function.cpp:
        (KJS::ActivationImp::getPropertyNames):
        * kjs/function.h:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28053 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,18 @@
+2007-11-26  Geoffrey Garen  <ggaren@apple.com>
+
+        Reviewed by Kevin McCullough.
+        
+        Fixed <rdar://problem/5597937> REGRESSION (r27126): Drosera does not 
+        show variables (can't enumerate ActivationImp properties)
+        
+        Implemented a custome ActivationImp::getPropertyNames, since 
+        ActivationImp now uses a custom property storage mechanism for local
+        variables.
+
+        * kjs/function.cpp:
+        (KJS::ActivationImp::getPropertyNames):
+        * kjs/function.h:
+
 2007-11-26  Alp Toker  <alp@atoker.com>
 
         GTK+/Qt/Wx build fix for breakage introduced in r28039.
