--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-26  Steve Falkenburg  <sfalken@apple.com>
+
+        Build fix.
+
+        * WebCore.vcproj/migrate-idls.sh:
+
 2007-11-26  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Dave Hyatt.
