--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -2,6 +2,12 @@
 
         Build fix.
 
+        * WebKit.vcproj/WebKit.make:
+
+2007-11-26  Steve Falkenburg  <sfalken@apple.com>
+
+        Build fix.
+
         * WebKit.vcproj/build-generated-files.sh:
 
 2007-11-26  Steve Falkenburg  <sfalken@apple.com>
