Make WebKitGraphics able to handle grayscale colors
 WebCore:

         Add a Color(CGColorRef) constructor

         Reviewed by Darin.

         * platform/graphics/Color.h:
         * platform/graphics/cg/ColorCG.cpp:
         (WebCore::Color::Color): Added.

 WebKit/win:

         Take advantage of the new Color constructor that takes a CGColorRef

         This lets us handle grayscale colors (which only have 2 components).

         Reviewed by Darin.

         * WebKitGraphics.cpp:
         (DrawTextAtPoint):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28067 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-11-26  Adam Roben  <aroben@apple.com>
+
+        Add a Color(CGColorRef) constructor
+
+        Reviewed by Darin.
+
+        * platform/graphics/Color.h:
+        * platform/graphics/cg/ColorCG.cpp:
+        (WebCore::Color::Color): Added.
+
 2007-11-26  Adele Peterson  <adele@apple.com>
 
         Reviewed by Darin.
