--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,18 @@
+2007-11-27  Alp Toker  <alp@atoker.com>
+
+        Reviewed by Mark Rowe.
+
+        Based on changes by Mike Emmel.
+
+        CURL HTTP backend local file fixes:
+
+        Set a MIME type for local files based on the file extension.
+
+        Remove any HTTP query part sent to a local file.
+
+        * platform/network/curl/ResourceHandleManager.cpp:
+        (WebCore::ResourceHandleManager::startJob):
+
 2007-11-26  Brady Eidson  <beidson@apple.com>
 
         Reviewed by Mark Rowe
