2007-11-27  Alp Toker  <alp@atoker.com>
        Fix potential broken build due to a missing DEPENDPATH.

        * WebCore.pro:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28073 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-27  Alp Toker  <alp@atoker.com>
+
+        Fix potential broken build due to a missing DEPENDPATH.
+
+        * WebCore.pro:
+
 2007-11-26  Timothy Hatcher  <timothy@apple.com>
 
         Reviewed by Dave Hyatt.
