--- a/JavaScriptGlue/ChangeLog
+++ b/JavaScriptGlue/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-27  Anders Carlsson  <andersca@apple.com>
+        
+        Build fix.
+        
+        * JSUtils.cpp:
+        (KJSValueToCFTypeInternal):
+        * JSValueWrapper.cpp:
+        (JSValueWrapper::JSObjectCopyPropertyNames):
+
 2007-11-21  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Eric.
