Add COMEnumVariant.h to the project.
        * WebKit.vcproj/WebKit.vcproj:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28090 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,8 +1,14 @@
 2007-11-27  Anders Carlsson  <andersca@apple.com>
 
+        Add COMEnumVariant.h to the project.
+        
+        * WebKit.vcproj/WebKit.vcproj:
+
+2007-11-27  Anders Carlsson  <andersca@apple.com>
+
         Reviewed by Adam.
 
-        Return E_INVALIDARG if the databaseName BSTR is null;
+        Return E_INVALIDARG if the databaseName BSTR is null.
         
         * WebDatabaseManager.cpp:
         (WebDatabaseManager::detailsForDatabaseWithOrigin):
