Speculative fix to get Drosera working.
        * COMEnumVariant.h:
        (::Next):
        Update the number of elements fetched correctly.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28096 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-27  Anders Carlsson  <andersca@apple.com>
+
+        Speculative fix to get Drosera working.
+        
+        * COMEnumVariant.h:
+        (::Next):
+        Update the number of elements fetched correctly.
+        
 2007-11-27  Anders Carlsson <andersca@apple.com>
 
         Reviewed by Adam.
