Not reviewer for this patch.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28105 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,6 +1,6 @@
 2007-11-27  Maciej Stachowiak  <mjs@apple.com>
 
-        Not reviewed.
+        Reviewed by Darin.
 
         Fix DumpRenderTree ObjC bug comparing strings.
 
