Reviewed by Maciej and Adam.
        - Added Drosera to the WebKit project.

        * WebKit.vcproj/WebKit.sln:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@28112 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-27  Kevin McCullough  <kmccullough@apple.com>
+
+        Reviewed by Maciej and Adam.
+
+        - Added Drosera to the WebKit project.
+
+        * WebKit.vcproj/WebKit.sln:
+
 2007-11-27  Jon Honeycutt  <jhoneycutt@apple.com>
 
         Reviewed by Adam.
