--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,18 @@
+2007-11-28  Peter Kasting  <zerodpx@gmail.com>
+
+        Reviewed by Alp Toker.
+
+        http://bugs.webkit.org/show_bug.cgi?id=16169
+        GIF decoder needs to set hasAlpha() correctly on subsequent frames.
+        
+        This also removes the workaround for this problem in
+        ImageSourceCairo.cpp.
+
+        * platform/graphics/cairo/ImageSourceCairo.cpp:
+        (WebCore::ImageSource::frameHasAlphaAtIndex):
+        * platform/image-decoders/gif/GIFImageDecoder.cpp:
+        (WebCore::GIFImageDecoder::initFrameBuffer):
+
 2007-11-28  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Darin Adler and Adam Roben.
